@@ -441,6 +441,14 @@ class Database {
 	}
 
 	/**
+	 * Returns true if this database does an implicit order by when the column has an index
+	 * For example: SELECT page_title FROM page LIMIT 1
+	 */
+	function implicitOrderby() {
+		return true;
+	}
+
+	/**
 	 * Returns true if this database can do a native search on IP columns
 	 * e.g. this works as expected: .. WHERE rc_ip = '127.42.12.102/32';
 	 */
